[package]
name = "backend-lab"
version = "0.1.0"
edition = "2024"

[workspace]
# This prevents it from accidentally being absorbed by a parent workspace if one is ever created.

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.28", features = ["tokio-comp"] }
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.12", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
